# srcReader

./: CMakeLists.txt  README.md
CMake/: CMakeLists.txt  src_reader_build.cmake  src_reader_install.cmake  srcml_text_reader_build.cmake  srcml_text_reader_install.cmake
src/: CMakeLists.txt  src_author.hpp  srcml_node.cpp  srcml_node.hpp  srcml_reader.cpp  srcml_reader.hpp  srcml_writer.cpp  srcml_writer.hpp
